- update to java 15 config - add more tests on streamex operations